@startuml

title __SETTINGS's Class Diagram__\n

  namespace com.example.our_planner {
    namespace ui.settings {
      class com.example.our_planner.ui.settings.SettingsFragment {
          - CAPTURE_IMAGE_ACTIVITY_REQUEST_CODE : int
          - PICK_PHOTO_CODE : int
          - changeProfilePictureBtn : Button
          - notificationsAlertSpinner : Spinner
          - profilePicture : ImageView
          - themeSpinner : Spinner
          + onActivityResult()
          + onCreateView()
          + onDestroyView()
          + onItemSelected()
          + onNothingSelected()
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.settings {
      class com.example.our_planner.ui.settings.SettingsViewModel {
          - mText : MutableLiveData<String>
          + SettingsViewModel()
          + getText()
      }
    }
  }
  

  com.example.our_planner.ui.settings.SettingsFragment .up.|> android.widget.AdapterView.OnItemSelectedListener
  com.example.our_planner.ui.settings.SettingsFragment -up-|> androidx.fragment.app.Fragment
  com.example.our_planner.ui.settings.SettingsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
